--- a/index.html
+++ b/index.html
@@ -4,133 +4,168 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="style.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container-fluid">
+
           <section id="nav">
-            <div class="row">
-              <nav class="navbar navbar-default">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="#">BootStrap</a>
-                </div>
-              </nav>
-            </div>
+            <!-- <div class="container"> -->
+              <!-- <div class="row"> -->
+                <nav class="navbar navbar-default">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li> <a href="#"> PORTFOLIO</a> </li>
+                      <li> <a href="#"> ABOUT</a> </li>
+                      <li> <a href="#"> CONCACT</a> </li>
+                    </ul>
+                  </div>
 
-
+                </nav>
+              <!-- </div> -->
+            <!-- </div> -->
           </section>
 
           <section id="jumbo">
-            <div class="row">
-              <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-4 col-lg-offset-4">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3  col-lg-5 col-lg-offset-4">
+                  <img src="img/avatar.svg" alt="Omino">
+                  <h1>START BOOTSTRAP</h1>
+                  <div class="divider-custom divider-light">
+                    <div class="line"> </div>
+                    <div class="icona">
 
+                    </div>
+                    <div class="line"> </div>
+                  </div>
+                </div>
               </div>
             </div>
           </section>
 
         <section id="portfolio">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-4 col-lg-offset-4">
-              <span>portfolio</span>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-4 col-lg-offset-4">
+                <h1>PORTFOLIO</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/casa.png" alt="Casa">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/torta.png" alt="">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/tenda.png" alt="">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/game.png" alt="">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/cassa.png" alt="">
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="img/sub.png" alt="">
+              </div>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <span>immagini</span>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <span>immagini</span>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <span>immagini</span>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <span>immagini</span>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <span>immagini</span>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <span>immagini</span>
-            </div>
-          </div>
         </section>
 
         <section id="about">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-4 col-lg-offset-4">
-              <h1>ABOUT</h1>
-            </div>
-            <div class="col-sm-12 col-md-offset-2 col-md-4  col-lg-4 col-offset-2">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor </p>
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 col-offset-2">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-4 col-lg-offset-4">
+                <h1>ABOUT</h1>
+              </div>
+              <div class="col-sm-12 col-md-offset-2 col-md-4  col-lg-4 col-offset-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor </p>
+              </div>
+              <div class="col-sm-12 col-md-4 col-lg-4 col-offset-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
             </div>
           </div>
+
         </section>
 
         <section id="contatti">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-8 col-lg-offset-2">
-              <h3>Concact Us</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-8 col-lg-offset-2">
+                <h3>CONCACT US</h3>
+              </div>
             </div>
-
           </div>
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4  col-lg-8 col-lg-offset-1">
-              <form>
-                <div class="form-group">
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" id="exampleInputPhoneNumber" placeholder="PhoneNumber">
-                </div>
-                <div class="form-group">
-                  <textarea name="name" class="form-control" rows="8" cols="80" placeholder="Message"></textarea>
-                </div>
-                <button type="submit"  class="btn btn-default" > Send</button>
-              </form>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2  col-lg-8 col-lg-offset-2">
+                <form>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="exampleInputPhoneNumber" placeholder="PhoneNumber">
+                  </div>
+                  <div class="form-group">
+                    <textarea name="name" class="form-control" rows="8" cols="80" placeholder="Message"></textarea>
+                  </div>
+                  <button type="submit"  class="btn btn-default" > Send</button>
+                </form>
+              </div>
             </div>
           </div>
         </section>
 
         <section id="footer">
-          <div class="row">
-            <div class="col-sm-12 col-md-offset-2 col-md-3 col-lg-3">
-              <span>location</span>
-            </div>
-            <div class="col-sm-12 col-md-3 col-lg-3">
-              <span>around</span>
-            </div>
-            <div class="col-sm-12 col-md-3 col-lg-3">
-              <span>about</span>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12  col-md-3 col-lg-3">
+                <h3>LOCATION</h3>
+                <p>2215 John Daniel Drive Clark, MO 65243</p>
+              </div>
+              <div class="col-sm-12  col-md-4 col-lg-offset-1 col-lg-3">
+                <h3>AROUND THE WEB</h3>
+
+              </div>
+              <div class="col-sm-12  col-md-5 col-lg-offset-1 col-lg-4">
+                <h3>ABOUT FREELANCER</h3>
+                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap.</p>
+              </div>
             </div>
           </div>
         </section>
 
         <section id="copy">
+          <div class="container">
             <div class="col-sm-12 col-md-12 col-lg-12">
-              <span>Copyright</span>
+              <h6>Copyright © Your Website 2020</h6>
             </div>
+          </div>
         </section>
 
-    </div>
+
 
   </body>
 </html>
