--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
@@ -54,6 +54,7 @@
                     </div>
                     <div class="line"> </div>
                   </div>
+                  <p>Graphic Artist - Web Designer - Illustrator</p>
                 </div>
               </div>
             </div>
@@ -147,7 +148,10 @@
               </div>
               <div class="col-sm-12  col-md-4 col-lg-offset-1 col-lg-3">
                 <h3>AROUND THE WEB</h3>
-
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-google-plus-g"></i>
               </div>
               <div class="col-sm-12  col-md-5 col-lg-offset-1 col-lg-4">
                 <h3>ABOUT FREELANCER</h3>
